# chat

./: docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
db/: chatbot.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/pages/: _app.tsx  index.tsx
frontend/pages/api/auth/: [...nextauth].ts
frontend/styles/: globals.css
