[project]
name = "first-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[async]>=3.1",    # async postgres driver
    "asyncpg>=0.29",    
    "alembic>=1.13",          # optional, for migrations
    "bcrypt>=4.0.1"           # optional, for password hashing
]



